updated login api to post
